--- a/src/www/css/animations.css
+++ b/src/www/css/animations.css
@@ -60,18 +60,18 @@
     animation: shake .3s ease;
 }
 
-@keyframes slideUp {
+@keyframes showAlert {
     0%   { opacity: 0; transform: translateY(100%); }
     100% { opacity: 1; transform: translateY(0); }
 }
-.slideUp {
-    animation: slideUp .3s ease;
+.showAlert {
+    animation: showAlert .3s ease;
 }
 
-@keyframes slideDown {
+@keyframes hideAlert {
     0%   { opacity: 1; transform: translateY(0); }
     100% { opacity: 0; transform: translateY(100%); }
 }
-.slideDown {
-    animation: slideDown .3s ease;
+.hideAlert {
+    animation: hideAlert .3s ease;
 }
