--- a/src/www/css/license.css
+++ b/src/www/css/license.css
@@ -7,7 +7,7 @@
 }
 
 html {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: -apple-system, sans-serif;
     font-size: 100%;
     line-height: 1.4;
     -webkit-text-size-adjust: 100%;
