--- a/src/www/js/app/components/dashboard/dashboard.html
+++ b/src/www/js/app/components/dashboard/dashboard.html
@@ -1,10 +1,10 @@
-<section class="tabs">
+<section role="tablist">
 
     <section role="tabpanel">
         <header>
             <h2 data-bind="i18n: 'TitleDashboard'"></h2>
         </header>
-        <div class="tabcontent">
+        <div>
             <div class="forecast">
 
                 <!-- ko if: isLoading -->
@@ -32,11 +32,11 @@
 
             <!-- ko foreach: { data: configuredZones, as: 'zone', noChildContext: true } -->
             <div class="card">
-                <h2 data-bind="text: zone.name"></h2>
+                <h4 data-bind="text: zone.name"></h4>
                 <!-- ko ifnot: zone.isRunning -->
                 <small data-bind="text: NextRun(zone)"></small>
                 <!-- ko if: zone.schedule.duration -->
-                <button data-bind="text: NextDuration(zone)"></button>
+                <button data-bind="text: NextDuration(zone), click: $parent.scheduleOptions.bind(null, zone)"></button>
                 <!-- /ko -->
                 <!-- /ko -->
                 <!-- ko if: zone.isRunning -->
