--- a/src/www/js/app/components/zones/zones.html
+++ b/src/www/js/app/components/zones/zones.html
@@ -1,10 +1,10 @@
-<section class="tabs" data-bind="navStack: NavigationStack">
+<section role="tablist">
 
     <section role="tabpanel">
         <header>
             <h2 data-bind="i18n: 'TitleZones'"></h2>
         </header>
-        <div class="tabcontent">
+        <div>
             <fieldset>
             <!-- ko foreach: Zones -->
             <a class="select" data-bind="text: $data.name, click: $component.showZone"></a>
@@ -13,8 +13,6 @@
         </div>
     </section>
 
-    <!-- ko if: selectedZone -->
-    <!-- ko component: { name: "Zone", params: { zone: selectedZone, navStack: NavigationStack  } } --><!-- /ko -->
-    <!-- /ko -->
+    <!-- ko navDestination: { for: selectedZone, destination: 'Zone' } --><!-- /ko -->
 
 </section>
