--- a/src/www/js/app/components/prefs/prefs.html
+++ b/src/www/js/app/components/prefs/prefs.html
@@ -5,6 +5,11 @@
             <h2 data-bind="i18n: 'TitlePreferences'"></h2>
         </header>
         <div>
+            <div class="app-info">
+                <img src="img/app-icon.png" alt="App Icon"></a>
+                <h2>Sprinklers</h2>
+                <p><b>v0.3.0</b> (2024-06-14)</p>
+            </div>
             <label>
                 <a class="select" data-bind="navLink: 'Language', i18n: 'TitleLanguage'"></a>
             </label>
